--- a/project1/hw2.ipynb
+++ b/project1/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -34,6 +34,7 @@
     "num_actions = 4\n",
     "gamma = 1\n",
     "theta = 0.5\n",
+    "prob = 0.1\n",
     "\n",
     "a_desc = [\"UP\", \"DOWN\", \"LEFT\", \"RIGHT\"]\n",
     "# 0 - UP\n",
@@ -58,6 +59,9 @@
     "# Initialize the reward function\n",
     "r = np.zeros((num_actions,num_states, num_states))\n",
     "\n",
+    "# Initialize the transition probability function\n",
+    "p = np.zeros((num_actions,num_states, num_states))\n",
+    "\n",
     "# Initialize the probability of taking each action in each state\n",
     "# pi = np.ones((num_states, num_actions, num_states))\n",
     "\n",
@@ -73,7 +77,7 @@
     "        reward += -10\n",
     "    elif(s_prime == 'G'):\n",
     "        reward += 200\n",
-    "        \n",
+    "    \n",
     "    reward += -1\n",
     "    \n",
     "    return  reward\n",
@@ -96,7 +100,10 @@
     "# Get state from the location in the maze\n",
     "def getStateFromMaze(i,j):\n",
     "    k = np.where((s_loc == (i,j)).all(axis=1))\n",
-    "    return k[0][0]\n",
+    "    if(k[0].size == 0):\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return k[0][0]\n",
     "            \n",
     "# Get the next state given the current state and the action\n",
     "def getNextState(s, a):\n",
@@ -109,63 +116,49 @@
     "    if(a == 0):\n",
     "        # Action is UP\n",
     "        if(maze[i-1][j] != 'W'):\n",
-    "            s_prime = getState(i-1,j)\n",
+    "            s_prime = getStateFromMaze(i-1,j)\n",
+    "            p[a][s][s_prime] = 1 - prob\n",
     "        else:\n",
     "            s_prime = s\n",
     "    elif(a == 1):\n",
     "        # Action is DOWN\n",
     "        if(maze[i+1][j] != 'W'):\n",
-    "            s_prime = getState(i+1,j)\n",
+    "            s_prime = getStateFromMaze(i+1,j)\n",
+    "            p[a][s][s_prime] = 1 - prob\n",
     "        else:\n",
     "            s_prime = s\n",
     "    elif(a == 2):\n",
     "        # Action is LEFT\n",
     "        if(maze[i][j-1] != 'W'):\n",
-    "            s_prime = getState(i,j-1)\n",
+    "            s_prime = getStateFromMaze(i,j-1)\n",
+    "            p[a][s][s_prime] = 1 - prob\n",
     "        else:\n",
     "            s_prime = s\n",
     "    elif(a == 3):\n",
     "        # Action is RIGHT\n",
     "        if(maze[i][j+1] != 'W'):\n",
-    "            s_prime = getState(i,j+1)\n",
+    "            s_prime = getStateFromMaze(i,j+1)\n",
+    "            p[a][s][s_prime] = 1 - prob\n",
     "        else:\n",
     "            s_prime = s\n",
     "    \n",
-    "    return s_prime\n"
+    "    return s_prime\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The current state is:  3 [1 4]\n",
-      "The next state given the action UP is:  6 [2 4]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "s = 3\n",
-    "\n",
-    "print(\"The current state is: \", s,s_loc[s])\n",
-    "\n",
-    "next_state = getNextState(s,1)\n",
-    "print(\"The next state given the action UP is: \", next_state, s_loc[next_state])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "for a in range(num_actions):\n",
+    "    for s in range(num_states):\n",
+    "        for s_prime in range(num_states):\n",
+    "            r[a][s][s_prime] = getReward(maze[s_loc[s_prime,0]][s_loc[s_prime,1]])\n",
+    "            # p[a][s][s_prime] = \n",
+    "            \n"
    ]
   },
   {
@@ -183,9 +176,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (1896551829.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
    "source": [
     "def getValueState(s, v, pi):\n",
     "    \n",
@@ -193,6 +195,69 @@
     "    for a in range(num_actions):\n",
     "        \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Policy Evaluation\n",
+    "\n",
+    "$\n",
+    "\\begin{align}\n",
+    "V^{\\pi}(S) = \\sum_{S'} P(S'|S,\\pi(S)) \\ \\ \\ [R(S,\\pi(S),S')+V^{\\pi}(S')]\n",
+    "\\end{align}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "policy = np.zeros(num_states)\n",
+    "\n",
+    "print(policy)\n",
+    "\n",
+    "def policy_evaluation(env, policy, gamma=0.9, theta=0.01):\n",
+    "    \"\"\"\n",
+    "    Evaluates a given policy in a dynamic programming setting.\n",
+    "\n",
+    "    Args:\n",
+    "        env: The environment with a defined MDP (states, actions, rewards, transitions)\n",
+    "        policy: The policy to be evaluated (mapping of states to actions)\n",
+    "        gamma: The discount factor for future rewards.\n",
+    "        theta: The convergence threshold.\n",
+    "\n",
+    "    Returns:\n",
+    "        np.array: An array of state-value estimates.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # num_states = env.nS  # Number of states\n",
+    "    value_func = np.zeros(num_states)  # Initialize state-value function\n",
+    "\n",
+    "    while True:\n",
+    "        delta = 0  # Track the maximum change in value function\n",
+    "        for s in range(num_states):\n",
+    "            v = 0\n",
+    "            action = policy[s]\n",
+    "            for prob, next_state, reward, _ in env.P[s][action]:\n",
+    "                v += prob * (reward + gamma * value_func[next_state])\n",
+    "            delta = max(delta, abs(v - value_func[s]))\n",
+    "            value_func[s] = v  \n",
+    "        if delta < theta:\n",
+    "            break\n",
+    "\n",
+    "    return value_func"
    ]
   },
   {
