--- a/project1/hw2.ipynb
+++ b/project1/hw2.ipynb
@@ -34,7 +34,7 @@
     "num_actions = 4\n",
     "gamma = 1\n",
     "theta = 0.5\n",
-    "prob = 0.1\n",
+    "prob = 0.02\n",
     "\n",
     "a_desc = [\"UP\", \"DOWN\", \"LEFT\", \"RIGHT\"]\n",
     "# 0 - UP\n",
@@ -53,14 +53,10 @@
     "s_loc = np.zeros((num_states,2))\n",
     "# print(s_loc)\n",
     "\n",
-    "# Initialize the state-value function V_0(s) = 0\n",
-    "v = np.zeros(num_states)\n",
-    "\n",
     "# Initialize the reward function\n",
     "r = np.zeros((num_actions,num_states, num_states))\n",
     "\n",
-    "# Initialize the transition probability function\n",
-    "p = np.zeros((num_actions,num_states, num_states))\n",
+    "\n",
     "\n",
     "# Initialize the probability of taking each action in each state\n",
     "# pi = np.ones((num_states, num_actions, num_states))\n",
@@ -73,9 +69,13 @@
     "def getReward(s_prime):\n",
     "    reward = 0\n",
     "    \n",
-    "    if(s_prime == 'B'):\n",
+    "    # The location of the current state in the maze\n",
+    "    i = s_loc[s_prime,0]\n",
+    "    j = s_loc[s_prime,1]\n",
+    "    \n",
+    "    if(maze[i][j] == 'B'):\n",
     "        reward += -10\n",
-    "    elif(s_prime == 'G'):\n",
+    "    elif(maze[i][j] == 'G'):\n",
     "        reward += 200\n",
     "    \n",
     "    reward += -1\n",
@@ -117,147 +117,129 @@
     "        # Action is UP\n",
     "        if(maze[i-1][j] != 'W'):\n",
     "            s_prime = getStateFromMaze(i-1,j)\n",
-    "            p[a][s][s_prime] = 1 - prob\n",
     "        else:\n",
     "            s_prime = s\n",
     "    elif(a == 1):\n",
     "        # Action is DOWN\n",
     "        if(maze[i+1][j] != 'W'):\n",
     "            s_prime = getStateFromMaze(i+1,j)\n",
-    "            p[a][s][s_prime] = 1 - prob\n",
     "        else:\n",
     "            s_prime = s\n",
     "    elif(a == 2):\n",
     "        # Action is LEFT\n",
     "        if(maze[i][j-1] != 'W'):\n",
     "            s_prime = getStateFromMaze(i,j-1)\n",
-    "            p[a][s][s_prime] = 1 - prob\n",
     "        else:\n",
     "            s_prime = s\n",
     "    elif(a == 3):\n",
     "        # Action is RIGHT\n",
     "        if(maze[i][j+1] != 'W'):\n",
     "            s_prime = getStateFromMaze(i,j+1)\n",
-    "            p[a][s][s_prime] = 1 - prob\n",
     "        else:\n",
     "            s_prime = s\n",
     "    \n",
+    "    \n",
     "    return s_prime\n",
-    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the probability of the other states given the current state and action\n",
+    "def getOtherState(s,a):\n",
+    "    for i in range(num_actions):\n",
+    "        if(i != a):\n",
+    "            s_prime = getNextState(s,i)\n",
+    "            p[a][s][s_prime] += prob/3\n",
+    "\n",
+    "\n",
+    "# Create the probability transition matrix\n",
+    "def createTransitionMatrix():\n",
+    "    for a in range(num_actions):\n",
+    "        for s in range(num_states):\n",
+    "            for s_prime in range(num_states):\n",
+    "                if(s_prime == getNextState(s,a) and s_prime != s):\n",
+    "                    p[a][s][s_prime] = 1-prob\n",
+    "                    getOtherState(s,a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problem 1\n",
+    "\n",
+    "## Vector Form Policy Iteration\n",
+    "\n",
+    "Value-State Function:\n",
+    "\n",
+    "$\n",
+    "\\begin{align}\n",
+    "V^{\\pi}(S) = \\sum_{S'} P(S'|S,\\pi(S))[R(S,\\pi(S),S')+\\gamma V^{\\pi}(S')]\n",
+    "\\end{align}\n",
+    "$\n",
+    "\n",
+    "$\n",
+    "p = 0.02, \\gamma = 0.95, \\theta = 0.01\n",
+    "$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "for a in range(num_actions):\n",
-    "    for s in range(num_states):\n",
-    "        for s_prime in range(num_states):\n",
-    "            r[a][s][s_prime] = getReward(maze[s_loc[s_prime,0]][s_loc[s_prime,1]])\n",
-    "            # p[a][s][s_prime] = \n",
-    "            \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Value Iteration\n",
-    "\n",
-    "$\n",
-    "\\begin{align}\n",
-    "V_{k+1} = \\max_{a \\in A} \\sum_{S'} P(S'|S,a) \\ \\ \\ [R(S,a,S')+V_k]\n",
-    "\\end{align}\n",
-    "$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (1896551829.py, line 6)",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 24\u001b[0m\n\u001b[1;32m     21\u001b[0m     pi \u001b[38;5;241m=\u001b[39m pi_0[s]\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m s_prime \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_states):\n\u001b[0;32m---> 24\u001b[0m         v_1[s] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m p[pi][s][s_prime] \u001b[38;5;241m*\u001b[39m (getReward(s_prime) \u001b[38;5;241m+\u001b[39m (gamma \u001b[38;5;241m*\u001b[39m v_0[s_prime]))\n\u001b[1;32m     26\u001b[0m     delta \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(delta, \u001b[38;5;28mabs\u001b[39m(v_1[s] \u001b[38;5;241m-\u001b[39m v_0[s]))\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m(delta \u001b[38;5;241m<\u001b[39m theta):\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "def getValueState(s, v, pi):\n",
-    "    \n",
-    "    # For each action\n",
-    "    for a in range(num_actions):\n",
+    "prob = 0\n",
+    "gamma = 1\n",
+    "theta = 0.5\n",
+    "\n",
+    "# Initialize the transition probability function\n",
+    "p = np.zeros((num_actions,num_states, num_states))\n",
+    "\n",
+    "createTransitionMatrix()\n",
+    "\n",
+    "pi_0 = np.zeros((num_states)).astype(int)\n",
+    "v_0 = np.zeros((num_states))\n",
+    "v_1 = np.zeros((num_states))\n",
+    "\n",
+    "pi_0 += 2\n",
+    "delta = 0\n",
+    "\n",
+    "while True:\n",
+    "    # delta = 0\n",
+    "    for s in range(num_states):\n",
+    "        v_0[s] = v_1[s]\n",
+    "        pi = pi_0[s]\n",
     "        \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Policy Evaluation\n",
+    "        for s_prime in range(num_states):\n",
+    "            v_1[s] += p[pi][s][s_prime] * (getReward(s_prime) + (gamma * v_0[s_prime]))\n",
+    "        \n",
+    "        delta = max(delta, abs(v_1[s] - v_0[s]))\n",
+    "            \n",
+    "    if(delta < theta):\n",
+    "        break\n",
     "\n",
-    "$\n",
-    "\\begin{align}\n",
-    "V^{\\pi}(S) = \\sum_{S'} P(S'|S,\\pi(S)) \\ \\ \\ [R(S,\\pi(S),S')+V^{\\pi}(S')]\n",
-    "\\end{align}\n",
-    "$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "policy = np.zeros(num_states)\n",
     "\n",
-    "print(policy)\n",
-    "\n",
-    "def policy_evaluation(env, policy, gamma=0.9, theta=0.01):\n",
-    "    \"\"\"\n",
-    "    Evaluates a given policy in a dynamic programming setting.\n",
-    "\n",
-    "    Args:\n",
-    "        env: The environment with a defined MDP (states, actions, rewards, transitions)\n",
-    "        policy: The policy to be evaluated (mapping of states to actions)\n",
-    "        gamma: The discount factor for future rewards.\n",
-    "        theta: The convergence threshold.\n",
-    "\n",
-    "    Returns:\n",
-    "        np.array: An array of state-value estimates.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # num_states = env.nS  # Number of states\n",
-    "    value_func = np.zeros(num_states)  # Initialize state-value function\n",
-    "\n",
-    "    while True:\n",
-    "        delta = 0  # Track the maximum change in value function\n",
-    "        for s in range(num_states):\n",
-    "            v = 0\n",
-    "            action = policy[s]\n",
-    "            for prob, next_state, reward, _ in env.P[s][action]:\n",
-    "                v += prob * (reward + gamma * value_func[next_state])\n",
-    "            delta = max(delta, abs(v - value_func[s]))\n",
-    "            value_func[s] = v  \n",
-    "        if delta < theta:\n",
-    "            break\n",
-    "\n",
-    "    return value_func"
+    "print(\"The state-value function is: \")\n",
+    "print(v_1)\n",
+    "print(delta)\n"
    ]
   },
   {
