Update Policy Evaluation method

--- a/project1/hw2.ipynb
+++ b/project1/hw2.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-28T23:24:12.660620Z",
+     "start_time": "2024-02-28T23:24:12.363124Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -56,7 +61,8 @@
     "# Initialize the reward function\n",
     "r = np.zeros((num_actions,num_states, num_states))\n",
     "\n",
-    "\n",
+    "# Initialize the transition probability function\n",
+    "p = np.zeros((num_actions,num_states, num_states))\n",
     "\n",
     "# Initialize the probability of taking each action in each state\n",
     "# pi = np.ones((num_states, num_actions, num_states))\n",
@@ -138,6 +144,7 @@
     "        else:\n",
     "            s_prime = s\n",
     "    \n",
+    "    r[a][s][s_prime] = getReward(s_prime)\n",
     "    \n",
     "    return s_prime\n",
     "\n"
@@ -145,10 +152,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-28T23:24:15.078894Z",
+     "start_time": "2024-02-28T23:24:15.072185Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "# Calculate the probability of the other states given the current state and action\n",
     "def getOtherState(s,a):\n",
     "    for i in range(num_actions):\n",
@@ -164,7 +185,12 @@
     "            for s_prime in range(num_states):\n",
     "                if(s_prime == getNextState(s,a) and s_prime != s):\n",
     "                    p[a][s][s_prime] = 1-prob\n",
-    "                    getOtherState(s,a)"
+    "                    getOtherState(s,a)\n",
+    "                elif(getNextState(s,a) == s):\n",
+    "                    p[a][s][s] = 1-prob\n",
+    "                    \n",
+    "createTransitionMatrix()\n",
+    "print(\"\")"
    ]
   },
   {
@@ -190,26 +216,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-28T23:23:44.530265Z",
+     "start_time": "2024-02-28T23:23:44.512925Z"
+    }
+   },
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 24\u001b[0m\n\u001b[1;32m     21\u001b[0m     pi \u001b[38;5;241m=\u001b[39m pi_0[s]\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m s_prime \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_states):\n\u001b[0;32m---> 24\u001b[0m         v_1[s] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m p[pi][s][s_prime] \u001b[38;5;241m*\u001b[39m (getReward(s_prime) \u001b[38;5;241m+\u001b[39m (gamma \u001b[38;5;241m*\u001b[39m v_0[s_prime]))\n\u001b[1;32m     26\u001b[0m     delta \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(delta, \u001b[38;5;28mabs\u001b[39m(v_1[s] \u001b[38;5;241m-\u001b[39m v_0[s]))\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m(delta \u001b[38;5;241m<\u001b[39m theta):\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The state-value function is: \n",
+      "[ -2.6977869  -2.34747    -2.63691    -2.63934    -2.21949   -24.41439\n",
+      " -25.03917    -2.21949    -2.21949    -2.87505    -2.21949   -24.41439\n",
+      " -25.55217   -16.70553  ]\n",
+      "0.47829690000000014\n"
      ]
     }
    ],
    "source": [
-    "prob = 0\n",
-    "gamma = 1\n",
+    "prob = 0.1\n",
+    "gamma = 0.9 \n",
     "theta = 0.5\n",
-    "\n",
+    "    \n",
     "# Initialize the transition probability function\n",
     "p = np.zeros((num_actions,num_states, num_states))\n",
     "\n",
@@ -220,19 +251,26 @@
     "v_1 = np.zeros((num_states))\n",
     "\n",
     "pi_0 += 2\n",
-    "delta = 0\n",
     "\n",
     "while True:\n",
-    "    # delta = 0\n",
+    "    delta = 0\n",
+    "    # v_1 = np.zeros((num_states))\n",
     "    for s in range(num_states):\n",
     "        v_0[s] = v_1[s]\n",
     "        pi = pi_0[s]\n",
     "        \n",
-    "        for s_prime in range(num_states):\n",
-    "            v_1[s] += p[pi][s][s_prime] * (getReward(s_prime) + (gamma * v_0[s_prime]))\n",
+    "        v_1[s] = 0\n",
     "        \n",
-    "        delta = max(delta, abs(v_1[s] - v_0[s]))\n",
+    "        for s_prime in range(num_states):\n",
+    "            if(p[pi][s][s_prime] != 0):\n",
+    "                v_1[s] += (p[pi][s][s_prime] * (r[pi][s][s_prime] + (gamma * v_0[s_prime])))\n",
+    "            else:\n",
+    "                v_1[s] += 0\n",
+    "                \n",
+    "        delta = max(delta, abs(v_0[s] - v_1[s]))\n",
     "            \n",
+    "        if(delta < theta):\n",
+    "            break\n",
     "    if(delta < theta):\n",
     "        break\n",
     "\n",
