New auto-commit

--- a/project2/project02-problem02.ipynb
+++ b/project2/project02-problem02.ipynb
@@ -56,6 +56,9 @@
     "                   [1,1,1,0],\n",
     "                   [1,1,1,1]])\n",
     "\n",
+    "# Adding new something\n",
+    "c = 0\n",
+    "\n",
     "num_states = states.shape[0]\n",
     "\n",
     "actions = np.array([[0,0,0,0],\n",
