Update Final Project

--- a/project2/project02-problem01.ipynb
+++ b/project2/project02-problem01.ipynb
@@ -972,9 +972,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m theta \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.01\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Initialize the transition probability function\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m p \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mzeros((num_actions,num_states, num_states))\n\u001b[1;32m      7\u001b[0m v_result \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((num_states))\n\u001b[1;32m      9\u001b[0m createTransitionMatrix(prob)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "prob = 0.02\n",
     "gamma = 0.95\n",
@@ -998,9 +1010,6 @@
     "\n",
     "        for s in range(num_states):\n",
     "            for a in range(num_actions):\n",
-    "        \n",
-    "                # v_1[a][s] = 0\n",
-    "\n",
     "                for s_prime in range(num_states):\n",
     "                    if(s != 11 or s_prime != 11):\n",
     "                        if(p[a][s][s_prime] != 0):\n",
@@ -1024,13 +1033,11 @@
     "\n",
     "\n",
     "v_result,q,delta = vib(p,r,gamma,theta)\n",
-    "# print(v_result)\n",
     "\n",
     "optimal_policy = []\n",
     "\n",
     "for i in range(num_states):\n",
     "    optimal_policy.append(np.argmax(q[:,i]))\n",
-    "    # print(np.max(q[:,i]))\n",
     "\n",
     "# print(optimal_policy)\n",
     "    \n"
@@ -1094,11 +1101,6 @@
     "heatmap.set_facecolor('black') # Color for the NaN cells in the state matrix\n",
     "coloring_blocks(heatmap, oil_states, bump_states, start_state,end_state)\n",
     "plt.title('Maze Problem')\n",
-    "\n",
-    "# Plot the route from the start state to the end state.\n",
-    "# This is just an example, you may want to keep pi* coordinates and actions in a different way\n",
-    "# path = [((3,3),'right'), ((3,4),'down'), ((4,4),'right'), ((4,5),'down'), \\\n",
-    "#         ((5,5),'right'), ((5,6),'down'), ((6,6),'right'), ((6,7),'down')]\n",
     "\n",
     "for s in range(num_states):\n",
     "    # The location of the current state in the maze\n",
@@ -1246,9 +1248,6 @@
     "\n",
     "for i in range(num_states):\n",
     "    optimal_policy.append(np.argmax(q[:,i]))\n",
-    "    # print(np.max(q[:,i]))\n",
-    "\n",
-    "# print(optimal_policy)\n",
     "    \n"
    ]
   },
